<resources>
    <string name="app_name">KotlinAndroidApplication</string>
    <string name="app_title">Welcome to Kotlin World</string>
    <string name="hint_email">Please Enter Email</string>
    <string name="hint_pass">Please Enter Password</string>
    <string name="login_sucess">Login Success</string>
    <string name="btn_txt">Login</string>
    <string name="welcome">Welcome To</string>
    <string name="current_course">Your Course : </string>
    <string name="select_course">Please Select New Course</string>
    <string name="course">Courses</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>

    <string name="contacts">Contacts</string>
    <string name="action_call">Call</string>
    <string name="action_sms">Sms</string>
    <string name="open_web">Open On Web</string>
    <string name="fetch_json">Fetch JSON</string>

    <string-array name="technology_list">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>.Net</item>
        <item>Kotlin</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>Python</item>
        <item>Java Script</item>
        <item>Php</item>
        <item>Ajax</item>
        <item>Perl</item>
        <item>Hadoop</item>
    </string-array>
</resources>
