<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textSize="@dimen/txt_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_margin="@dimen/margin_layout">

           <EditText
               android:id="@+id/edit_userEmail"
               android:layout_width="match_parent"
               android:hint="@string/hint_email"
               android:gravity="center"
               android:inputType="textEmailAddress"
               android:layout_height="wrap_content"/>

           <EditText
               android:id="@+id/edit_userPass"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:paddingTop="@dimen/txt_padding"
               android:hint="@string/hint_pass"
               android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/txt_padding"
                android:text="@string/btn_txt"></Button>
       </LinearLayout>

</LinearLayout>